--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -2,7 +2,7 @@
 layout: page
 title: Contact Me
 permalink: /contact/
-image: '/images/cover27.jpg'
+image: '/images/covers/cover27.jpg'
 ---
 <div class="form-container">
   {% if site.contact.description %}
