--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="stylesheet" type="text/css" href="css/badge.css">
 	</head>
 	<body>
 		<section class="section column-section section-bio">
 		<figure class="logo"></figure>
-			<p class="bio">Lorem ipsum dolor sit amet consectetur adipiscing elit, urna consequat felis vehicula class ultricies mollis dictumst, aenean non a in donec nulla. Phasellus ante pellentesque erat cum risus consequat imperdiet aliquam, integer placerat et turpis mi eros nec lobortis taciti, vehicula nisl litora tellus ligula porttitor metus. </p>
+			<p class="bio">Howdy! I'm Kyle and I am an infrastructure engineer from Portland, Maine! I focus on macOS devices and deploying, maintaining, and supporting them in large-scale enterprise environments. I have a passion for remote-first work and am always looking for the next best productivity tool. </p>
 		</section>
 		<section class="section column-section-main">
 			<div class="col-section">
@@ -126,9 +125,10 @@
 			</div>
 		</section>
 		<footer class="footer main-text main-text-small">
-			<a class="footer-links link-github" href="#">github</a>
-			<a class="footer-links link-linkedin" href="#">linkedin</a>
-            <a class="footer-links link-instagram" href="#">instagram</a>
+            <a class="footer-links link-email" href="mailto:kyle@leblanc.sh">email</a>
+			<a class="footer-links link-github" href="https://github.com/leblanck">github</a>
+			<a class="footer-links link-linkedin" href="https://www.linkedin.com/in/leblanck/">linkedin</a>
+            <a class="footer-links link-instagram" href="https://www.instagram.com/kyleblanc/">instagram</a>
 			<div class="scrunch" aria-hidden="true"></div>
 		</footer>
 	</body>
