--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 		</section>
 		<footer class="footer main-text main-text-small">
             <a class="footer-links link-email" href="mailto:kyle@leblanc.sh">email</a>
+            <a class="footer-links link-email" href="./KL_Resume_2022.pdf" target="_blank">resume</a>
 			<a class="footer-links link-github" href="https://github.com/leblanck">github</a>
 			<a class="footer-links link-linkedin" href="https://www.linkedin.com/in/leblanck/">linkedin</a>
             <a class="footer-links link-instagram" href="https://www.instagram.com/kyleblanc/">instagram</a>
