--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 			</div>
 		</section>
 		<footer class="footer main-text main-text-small">
+			<a class="footer-links link-github" href="blog.leblanc.sh">blog</a>
             <a class="footer-links link-email" href="mailto:kyle@leblanc.sh">email</a>
             <a class="footer-links link-email" href="./KL_Resume_2022.pdf" target="_blank">resume</a>
 			<a class="footer-links link-github" href="https://github.com/leblanck">github</a>
