--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 		<footer class="footer main-text main-text-small">
 			<a class="footer-links link-github" href="https://blog.leblanc.sh">blog</a>
             <a class="footer-links link-email" href="mailto:kyle@leblanc.sh">email</a>
+		<a class="footer-links link-email" href="https://photo.leblanc.sh">photo</a>
             <a class="footer-links link-email" href="./KL_Resume_2022.pdf" target="_blank">resume</a>
 			<a class="footer-links link-github" href="https://github.com/leblanck">github</a>
 			<a class="footer-links link-linkedin" href="https://www.linkedin.com/in/leblanck/">linkedin</a>
