--- a/index.html
+++ b/index.html
@@ -1,137 +1,209 @@
-<!DOCTYPE HTML>
-<html lang="en">
-	<head>
-		<title>Kyle LeBlanc - Mac Infrastructure Engineer - Portland, ME</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1">
-		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-	</head>
-	<body>
-		<section class="section column-section section-bio">
-		<figure class="logo"></figure>
-			<p class="bio">Howdy! I'm Kyle and I am an infrastructure engineer from Portland, Maine! I focus on macOS devices and deploying, maintaining, and supporting them in large-scale enterprise environments. I have a passion for remote-first work and am always looking for the next best productivity tool. </p>
-		</section>
-		<section class="section column-section-main">
-			<div class="col-section">
-				<h2 class="main-text">Work</h2>
-				<dl class="list">
-					<dt class="main-text main-text-small-bold">Liberty Mutual</dt>
-                    <dt class="main-text main-text-small-dates">Senior Mac Systems Engineer</dt>
-                    <dt class="main-text main-text-small-dates">2019 - Present</dt>
-					<dd class="list-item">
-						<a class="list-link" href="https://www.libertymutual.com">libertymutual.com</a>
-					</dd>
-					<dt class="main-text main-text-small-bold">Patient Ping</dt>
-                    <dt class="main-text main-text-small-dates">Lead IT Engineer</dt>
-                    <dt class="main-text main-text-small-dates">2018 - 2019</dt>
-					<dd class="list-item">
-						<a class="list-link" href="http://patientping.com">patientping.com</a>
-					</dd>
-					<dt class="main-text main-text-small-bold">Wayfair</dt>
-                    <dt class="main-text main-text-small-dates">Global Mac System Architect</dt>
-                    <dt class="main-text main-text-small-dates">2016 - 2018</dt>
-					<dd class="list-item">
-						<a class="list-link" href="https://www.wayfair.com">wayfiar.com</a>
-					</dd>
-					<dt class="main-text main-text-small-bold">Hill Holliday</dt>
-                    <dt class="main-text main-text-small-dates">Desktop Engineer</dt>
-                    <dt class="main-text main-text-small-dates">2014 - 2016</dt>
-					<dd class="list-item">
-						<a class="list-link" href="https://www.hhcc.com">hhcc.com</a>
-					</dd>
-					<dt class="main-text main-text-small-bold">MIT Lincoln Labs</dt>
-                    <dt class="main-text main-text-small-dates">Junior System Administrator</dt>
-                    <dt class="main-text main-text-small-dates">2013 - 2013</dt>
-						<dd class="list-item">
-						<a class="list-link" href="https://www.ll.mit.edu">ll.mit.edu</a>
-					</dd>
-				</dl>
+<!DOCTYPE html>
+<html>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Kyle LeBlanc - Infrastructure Engineer | Portland, ME | leblanc.sh</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack-subset.css">
+</head>
+
+<body>
+	<div>
+		<p>
+			ssh user@leblanc.sh</br>
+			user@leblanc.sh's password:</br>
+			Welcome to Ubuntu 22.04.1 LTS (GNU/Linux 5.15.0-46-generic x86_64)
+		</p>
+	</div>
+
+	<pre>
+   __   _______  __   ___   _  _______  ______ __
+  / /  / __/ _ )/ /  / _ | / |/ / ___/ / __/ // /
+ / /__/ _// _  / /__/ __ |/    / /___ _\ \/ _  /
+/____/___/____/____/_/ |_/_/|_/\___(_)___/_//_/
+	</pre>
+
+	<div class="line-wrapper">
+		<div class="slant-sm grey">
+			<i class="fa-brands fa-ubuntu fa-sm icon"></i>
+		</div>
+		<div class="slant-md blue">
+			<i class="fa-regular fa-folder-open fa-sm icon"></i> ~/Desktop/
+		</div>
+		<div class="slant-md green">
+			<i class="fa-brands fa-github-alt fa-sm icon"></i>
+			<i class="fa-solid fa-code-branch fa-sm icon"></i> main <i class="fa-regular fa-arrow-up"></i> 3
+		</div>
+
+		<div class="segment">
+		</div>
+
+		<div class="slant-lg yellow">
+			<i class="fa-solid fa-clock fa-sm icon-right"></i><span class="datewrapper"></span>
+		</div>
+	</div>
+
+	<div class="command-line">
+		<i class="fa-solid fa-terminal icon fa-sm"></i><span> cat about.txt
+	</div>
+
+	<div class="content-wrapper">
+		<p> Howdy! I'm Kyle and I am an infrastructure engineer from Portland, Maine! I focus on macOS devices and
+			deploying, maintaining, and supporting them in large-scale enterprise environments. I have a passion for
+			remote-first work and am always looking for the next best productivity tool.
+		</p>
+	</div>
+
+	<div class="line-wrapper">
+		<div class="slant-sm grey">
+			<i class="fa-brands fa-ubuntu fa-sm icon"></i>
+		</div>
+		<div class="slant-md-2 blue">
+			<i class="fa-regular fa-folder-open fa-sm icon"></i> /etc/
+		</div>
+		<div class="slant-md green">
+			<i class="fa-brands fa-github-alt fa-sm icon"></i>
+			<i class="fa-solid fa-code-branch fa-sm icon"></i> main <i class="fa-regular fa-arrow-up"></i> 3
+		</div>
+
+		<div class="segment">
+		</div>
+
+		<div class="slant-lg yellow">
+			<i class="fa-solid fa-clock fa-sm icon-right"></i><span class="datewrapper"></span>
+		</div>
+	</div>
+
+	<div class="command-line">
+		<i class="fa-solid fa-terminal icon fa-sm"></i><span> cat hosts
+	</div>
+
+	<div class="content-wrapper">
+		## </br>
+		# Work History</br>
+		#</br>
+		##</br>
+		2019 - Present, Senior Mac Systems Engineer, <a href="https://www.libertymutual.com">Liberty Mutual</a></br>
+		2018 - 2019, Lead IT Engineer, <a href="http://patientping.com">Patient Ping</a></br>
+		2016 - 2018, Global Mac System Engineer, <a href="https://www.wayfair.com">Wayfair</a></br>
+		2014 - 2016, Desktop Engineer, <a href="https://www.hhcc.com">Hill Holliday</a></br>
+		2013 - 2013, Junior Systems Admin, <a href="https://www.ll.mit.edu">MIT Lincoln Labs</a></br>
+	</div>
+	<div class="line-wrapper">
+		<div class="slant-sm grey">
+			<i class="fa-brands fa-ubuntu fa-sm icon"></i>
+		</div>
+		<div class="slant-md blue">
+			<i class="fa-regular fa-folder-open fa-sm icon"></i> /ssl/certs
+		</div>
+		<div class="slant-md green">
+			<i class="fa-brands fa-github-alt fa-sm icon"></i>
+			<i class="fa-solid fa-code-branch fa-sm icon"></i> main <i class="fa-regular fa-arrow-up"></i> 3
+		</div>
+
+		<div class="segment">
+		</div>
+
+		<div class="slant-lg yellow">
+			<i class="fa-solid fa-clock fa-sm icon-right"></i><span class="datewrapper"></span>
+		</div>
+	</div>
+
+	<div class="command-line">
+		<i class="fa-solid fa-terminal icon fa-sm"></i><span> vim cert_list
+	</div>
+
+	<div class="content-wrapper">
+		<div class="links-wrapper">
+			<div class="perms">
+				<span class="orange-text">Datadog</span>
+				<span class="orange-text">Google</span>
+				<span class="orange-text">Google</span>
+				<span class="orange-text">Google</span>
+				<span class="orange-text">SumoLogic</span>
+				<span class="orange-text">Jamf</span>
+				<span class="orange-text">Jamf</span>
+				<span class="orange-text">Apple</span>
 			</div>
-
-
-            <div class="col-section">
-                <h2 class="main-text">Certs</h2>
-                  <dl class="list">
-					<dt class="main-text main-text-small-bold">Datadog</dt>
-                    <dt class="main-text main-text-small-dates">Introduction to Datadog</dt>
-                    <dt class="main-text main-text-small-dates">Dec 2021</dt>
-                    <dd class="list-item">
-						<a class="list-link" href="#"></a>
-                    </dd>
-
-                    <dt class="main-text main-text-small-bold">Google</dt>
-                    <dt class="main-text main-text-small-dates">Google Cloud Essentials</dt>
-                    <dt class="main-text main-text-small-dates">Nov 2021</dt>
-                    <dd class="list-item">
-						<a class="list-link" href="#"></a>
-                    </dd>
-
-                    <dt class="main-text main-text-small-bold">Google</dt>
-                    <dt class="main-text main-text-small-dates">Foundational Taks in Google Cloud</dt>
-                    <dt class="main-text main-text-small-dates">Nov 2021</dt>
-                    <dd class="list-item">
-						<a class="list-link" href="#"></a>
-                    </dd>
-
-                    <dt class="main-text main-text-small-bold">Google</dt>
-                    <dt class="main-text main-text-small-dates">Create and Manage Cloud Resources</dt>
-                    <dt class="main-text main-text-small-dates">Nov 2021</dt>
-                    <dd class="list-item">
-						<a class="list-link" href="#"></a>
-                    </dd>
-
-                    <dt class="main-text main-text-small-bold">Sumo Logic</dt>
-                    <dt class="main-text main-text-small-dates">Certification for Fundamentals</dt>
-                    <dt class="main-text main-text-small-dates">Sept 2019</dt>
-                    <dd class="list-item">
-						<a class="list-link" href="#"></a>
-                    </dd>
-
-                    <dt class="main-text main-text-small-bold">Jamf</dt>
-                    <dt class="main-text main-text-small-dates">Casper Certified Administrator (CCA)</dt>
-                    <dt class="main-text main-text-small-dates">May 2016</dt>
-                    <dd class="list-item">
-						<a class="list-link" href="#"></a>
-                    </dd>
-
-                    <dt class="main-text main-text-small-bold">Jamf</dt>
-                    <dt class="main-text main-text-small-dates">Casper Certified Technician (CCT)</dt>
-                    <dt class="main-text main-text-small-dates">Nov 2015</dt>
-                    <dd class="list-item">
-						<a class="list-link" href="#"></a>
-                    </dd>
-
-                    <dt class="main-text main-text-small-bold">Apple</dt>
-                    <dt class="main-text main-text-small-dates">Apple Certified Mac Technician (ACMT)</dt>
-                    <dt class="main-text main-text-small-dates">Jun 2015</dt>
-                    <dd class="list-item">
-						<a class="list-link" href="#"></a>
-                    </dd>
-                  </dl>
-            </div>
-
-
-			<div class="col-section">
-			  <h2 class="main-text">Education</h2>
-				<dl class="list">
-					<dt class="main-text main-text-small-bold">Wentworth Institute of Technology</dt>
-                    <dt class="main-text main-text-small-dates">Bachelor of Science in Computer Networking and Information Systems</dt>
-                    <dt class="main-text main-text-small-dates">2010 - 2014</dt>
-						<dd class="list-item">
-						<a class="list-link" href="https://wit.edu">wit.edu</a>
-					</dd>
-				</dl>
+			<div class="owners">
+				<span>Introduction to Datadog</span>
+				<span>Google Cloud Essentials</span>
+				<span>Foundational Tasks in Google Cloud</span>
+				<span>Create and Manage Cloud Resources</span>
+				<span>Certificaiton for Fundamentals</span>
+				<span>Casper Certified Administrator (CCA)</span>
+				<span>Casper Certified Technician (CCT)</span>
+				<span>Apple Certified Mac Technician (ACMT)</span>
 			</div>
-		</section>
-		<footer class="footer main-text main-text-small">
-			<a class="footer-links link-github" href="https://blog.leblanc.sh">blog</a>
-            <a class="footer-links link-email" href="mailto:kyle@leblanc.sh">email</a>
-		<a class="footer-links link-email" href="https://photo.leblanc.sh">photo</a>
-            <a class="footer-links link-email" href="./KL_Resume_2022.pdf" target="_blank">resume</a>
-			<a class="footer-links link-github" href="https://github.com/leblanck">github</a>
-			<a class="footer-links link-linkedin" href="https://www.linkedin.com/in/leblanck/">linkedin</a>
-			<div class="scrunch" aria-hidden="true"></div>
-		</footer>
-	</body>
+			<div class="links can-hide">
+				<span class="grey-text">Dec 2021</span>
+				<span class="grey-text">Nov 2021</span>
+				<span class="grey-text">Nov 2021</span>
+				<span class="grey-text">Nov 2021</span>
+				<span class="grey-text">Sep 2019</span>
+				<span class="grey-text">May 2016</span>
+				<span class="grey-text">Nov 2015</span>
+				<span class="grey-text">Jun 2015</span>
+			</div>
+		</div>
+		<p>
+			:wq
+		</p>
+	</div>
+	<div class="line-wrapper">
+		<div class="slant-sm grey">
+			<i class="fa-brands fa-ubuntu fa-sm icon"></i>
+		</div>
+		<div class="slant-md-2 blue">
+			<i class="fa-regular fa-folder-open fa-sm icon"></i> /tmp/
+		</div>
+		<div class="slant-md green">
+			<i class="fa-brands fa-github-alt fa-sm icon"></i>
+			<i class="fa-solid fa-code-branch fa-sm icon"></i> main <i class="fa-regular fa-arrow-up"></i> 3
+		</div>
+
+		<div class="segment">
+		</div>
+
+		<div class="slant-lg yellow">
+			<i class="fa-solid fa-clock fa-sm icon-right"></i><span class="datewrapper"></span>
+		</div>
+	</div>
+
+	<div class="command-line">
+		<i class="fa-solid fa-terminal icon fa-sm"></i><span> ls -la
+	</div>
+	<div class="content-wrapper buffer">
+		<div class="links-wrapper">
+			<div class="perms">
+				<span>-rw-r--r--</span>
+				<span>-rw-rw-rw-</span>
+				<span>-rw-r--r--</span>
+				<span>-rw-r--r--</span>
+				<span>-rw-rw-r--</span>
+				<span>-rw-rw-rw-</span>
+			</div>
+			<div class="owners">
+				<span>root</span>
+				<span>root</span>
+				<span>root</span>
+				<span>root</span>
+				<span>root</span>
+				<span>root</span>
+			</div>
+			<div class="links">
+				<a href="https://blog.leblanc.sh">blog.html</a>
+				<a href="mailto:kyle@leblanc.sh">email</a>
+				<a href="https://photo.leblanc.sh">photo.jpg</a>
+				<a href="./KL_Resume_2022.pdf">resume.pdf</a>
+				<a href="https://github.com/leblanck">github.py</a>
+				<a href="https://www.linkedin.com/in/leblanck/">linkedin.html</a>
+			</div>
+		</div>
+	</div>
+	<script src="script.js"></script>
+	<script src="https://kit.fontawesome.com/1a6fbd13c0.js"></script>
+</body>
 </html>
