--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>replit</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+<!-- Primary Meta Tags -->
+<title>Kyle LeBlanc - Engineering | LeBlanc.sh</title>
+<meta name="title" content="Kyle LeBlanc - Engineering | LeBlanc.sh">
+<meta name="description" content="DevOps System Engineer from Portland, Maine. ">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://leblanc.sh/">
+<meta property="og:title" content="Kyle LeBlanc - Engineering | LeBlanc.sh">
+<meta property="og:description" content="DevOps System Engineer from Portland, Maine. ">
+<meta property="og:image" content="">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://leblanc.sh/">
+<meta property="twitter:title" content="Kyle LeBlanc - Engineering | LeBlanc.sh">
+<meta property="twitter:description" content="DevOps System Engineer from Portland, Maine. ">
+<meta property="twitter:image" content="">
+<meta charset="utf-8">
+	
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack-subset.css">
 	<link rel="stylesheet" href="gh_cal.css" type="text/css"/>
