added typing intro

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
 <body>
 	<div>
-		<p>
+		<p class="typer">
 			ssh user@leblanc.sh</br>
 			user@leblanc.sh's password:</br>
 			Welcome to Ubuntu 22.04.1 LTS (GNU/Linux 5.15.0-46-generic x86_64)
 		</p>
 	</div>
-
+<section class="output">
 	<pre>
    __   _______  __   ___   _  _______  ______ __
   / /  / __/ _ )/ /  / _ | / |/ / ___/ / __/ // /
@@ -271,7 +271,7 @@
 		</div>
 	</div>
 
-
+</section>
 	
 	<script src="script.js"></script>
 	<script src="https://kit.fontawesome.com/1a6fbd13c0.js"></script>
@@ -279,6 +279,7 @@
 	<script>
 		GitHubCalendar(".calendar", "leblanck", { responsive: true });
 	</script>
+
 </body>
 
 </html>
