fixing: typer intro

--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
 </head>
 
 <body>
-	<div>
-		<p class="typer">
-			ssh user@leblanc.sh</br>
-			user@leblanc.sh's password:</br>
-			Welcome to Ubuntu 22.04.1 LTS (GNU/Linux 5.15.0-46-generic x86_64)
-		</p>
+	<div class="typer-content">
+			<div>ssh user@leblanc.sh</br></div>
+			<div class="typer">user@leblanc.sh's password:</br></div>
 	</div>
 <section class="output">
+	<span class="motd">>Welcome to Ubuntu 22.04.1 LTS (GNU/Linux 5.15.0-46-generic x86_64)</span>
+
 	<pre>
    __   _______  __   ___   _  _______  ______ __
   / /  / __/ _ )/ /  / _ | / |/ / ___/ / __/ // /
