--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		# Work History</br>
 		#</br>
 		##</br>
-		2019 - Present, Senior Mac Systems Engineer, <a href="https://www.libertymutual.com">Liberty Mutual</a></br>
+		2019 - Present, Senior Infrastructure Engineer, <a href="https://www.libertymutual.com">Liberty Mutual</a></br>
 		2018 - 2019, Lead IT Engineer, <a href="http://patientping.com">Patient Ping</a></br>
 		2016 - 2018, Global Mac System Engineer, <a href="https://www.wayfair.com">Wayfair</a></br>
 		2014 - 2016, Desktop Engineer, <a href="https://www.hhcc.com">Hill Holliday</a></br>
