--- a/tennis/index.html
+++ b/tennis/index.html
@@ -118,7 +118,7 @@
                 <i class="fa-solid fa-star"></i>
               </div>
               <div class="col">
-                <a href="https://www.google.com/maps/place/South+Portland+High+School/@43.6210894,-70.268468,15z/data=!4m2!3m1!1s0x0:0x6c5cf885152ddb74?sa=X&ved=2ahUKEwiAuqzC_fCAAxUuuYkEHShbBNAQ_BJ6BAhVEAA&ved=2ahUKEwiAuqzC_fCAAxUuuYkEHShbBNAQ_BJ6BAhrEAg" class="review-link">South Portland, ME</a>
+                <a href="https://www.google.com/maps/place/South+Portland+High+School/@43.6210894,-70.268468,15z/data=!4m2!3m1!1s0x0:0x6c5cf885152ddb74?sa=X&ved=2ahUKEwiAuqzC_fCAAxUuuYkEHShbBNAQ_BJ6BAhVEAA&ved=2ahUKEwiAuqzC_fCAAxUuuYkEHShbBNAQ_BJ6BAhrEAg" class="review-link">S. Portland, ME</a>
               </div>
             </div>
             <div class="row">
