--- a/tennis/index.html
+++ b/tennis/index.html
@@ -132,6 +132,36 @@
                 </div>
             </div>
         </div>
+        <div class="container review-item">
+          <div class="row">
+            <div class="col">
+              <h3>Cape Elizabeth High School</h3>
+            </div>
+          </div>
+          <div class="row align-items-center">
+            <div class="col fat">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <div class="col">
+              <a href="https://www.google.com/maps/place/Cape+Elizabeth+High+School/@43.5917091,-70.2313068,17z/data=!3m1!4b1!4m6!3m5!1s0x4cb29fd1144aa5f1:0xbc049c6424213edf!8m2!3d43.5917052!4d-70.2287265!16s%2Fm%2F02q_ldx?entry=ttu" class="review-link">Cape Elizabeth, ME</a>
+            </div>
+          </div>
+          <div class="row">
+              <div class="col">
+                <h5>+++</h5>
+                <p>
+                  These courts are great, plain and simple. They're nothing fancy, but they are well kept and get the job done. I could play matches here or practice all day. Plenty of parking, good views.
+                </p>
+                <h5>---</h5>
+                <p>
+                  I wish there was a wall to practice solo against :(
+                </p>
+              </div>
+          </div>
+      </div>
     </section>
     <!-- End Reviews Section -->
 
