--- a/tennis/index.html
+++ b/tennis/index.html
@@ -168,47 +168,56 @@
     <!-- ======= Photo Section ======= -->
     <section id="photo" class="photo">
         <div class="container">
-            <div class="row" data-masonry='{"percentPosition": true }'>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/12.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/0.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/5.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/3.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/9.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/1.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/6.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/7.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/8.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/4.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/10.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/11.JPG">
-                </div>
-                <div class="col-sm-6 col-lg-4 mb-4">
-                    <img class="img-fluid" src="./img/2.JPG">
-                </div>
+          <div class="row text-center text-lg-start">
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square0.jpg" alt="">
             </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square13.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square12.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square7.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square4.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square5.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square15.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square9.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square1.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square6.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square8.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square3.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square2.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square14.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square10.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6">
+              <img class="img-fluid" src="./img/square11.jpg" alt="">
+            </div>
+          </div>
         </div>
     </section>
     <!-- End Photo Section -->
@@ -221,6 +230,5 @@
     <!-- End Recommendatinos Section -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
   </body>
 </html>
