fix: adjusted style

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -91,7 +91,6 @@
         <div class="text-center">
           <h3>Call To Action</h3>
           <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
         </div>
 
       </div>
@@ -145,7 +144,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Are gifts accepted?</div><i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Are gifts accepted?<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Your presence at our celebration is the greatest gift of all, but if we are honored with a gift from you, a monetary gift will be very much appreciated. In addition to being new homeowners, we are saving for the honeymoon of our dreams for our five year anniversary.
