--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -21,6 +21,8 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/1a6fbd13c0.js" crossorigin="anonymous"></script>
+
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -37,7 +39,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#faq">FAQ</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#contact">RSVP</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -62,21 +64,21 @@
         <div class="section-title">
           <h2>About</h2>
           <h3>Learn More <span>About Us</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <p>We invite you to join us in celebrating our marriage in a way that was not possible in 2020</p>
         </div>
 
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              We got married in November of 2020 during the height of COVID on our 7th anniversary. We were unable to gather in a large group to celebrate so we held a small and intimate ceremony. <br><br>
+              Now that the time of lockdowns has passed, we hope you will join us in celebrating our marriage on our 3rd anniversay (our 10th anniversary of being toghether!)
             </p>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+              If you have any questions about our party please reach out to us! Our phone numbers are listed in our RSVP section below. <br><br>
+
+              If you would like to view our wedding photos, you can do so <a href="https://aliciaszostak.smugmug.com/Clients/Wedding/Sam-Kyle/n-t5RBrM/">here!</a>
             </p>
           </div>
         </div>
@@ -254,7 +256,8 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; 2023 <strong><span>Kyle & Samantha</span></strong> - All Rights Reserved
+          &copy; 2023 <strong><span>Kyle & Samantha</span></strong> - All Rights Reserved <br>
+          Made with <i class="fa-solid fa-heart heart"></i> by <a href="https://leblanc.sh">Kyle</a>
         </div>
       </div>
     </div>
