feat: tweak type

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -70,7 +70,7 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              We got married in November of 2020 during the height of COVID on our 7th anniversary. We were unable to gather in a large group to celebrate so we held a small and intimate ceremony. <br><br>
+              We got married on November 7th, 2020 during the height of COVID on our 7th anniversary. We were unable to gather in a large group to celebrate so we held a small and intimate ceremony with our immediate families. <br><br>
               Now that the time of lockdowns has passed, we hope you will join us in celebrating our marriage on our 3rd anniversay (our 10th anniversary of being toghether!)
             </p>
           </div>
