--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -71,7 +71,7 @@
           <div class="col-lg-6">
             <p>
               We got married on November 7th, 2020 during the height of COVID on our 7th anniversary. We were unable to gather in a large group to celebrate so we held a small and intimate ceremony with our immediate families. <br><br>
-              Now that the time of lockdowns has passed, we hope you will join us in celebrating our marriage on our 3rd anniversay (our 10th anniversary of being toghether!)
+              Now that the time of lockdowns has passed, we hope you will join us in celebrating our marriage on our 3rd anniversay (our 10th anniversary of being together!)
             </p>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
