fix: update rsvp date

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -162,7 +162,7 @@
 
         <div class="section-title">
           <h3>RSVP</h3>
-          <p>Please use the form below to RSVP!</p>
+          <p>Please use the form below to RSVP by <span class="important-date">October 20th</span></p>
         </div>
 
         <div>
