--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -129,7 +129,7 @@
             <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Where can I park? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Apres is located in the East Bayside neighborhood of Portland and there is street parking. We encourage carpooling or ubering to the venue if you are able.
+                Apres is located in the East Bayside neighborhood of Portland and there is parking located on-site. It is accessible via the left side of the building. We encourage carpooling or ubering to the venue if you are able.
               </p>
             </div>
           </li>
