update faq link

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -147,7 +147,7 @@
             <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Are gifts accepted?<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Your presence at our celebration is the greatest gift of all, but if we are honored with a gift from you, a monetary gift will be very much appreciated. In addition to being new homeowners, we are saving for the honeymoon of our dreams for our five year anniversary.
+                Your presence at our celebration is the greatest gift of all, but if we are honored with a gift from you, a monetary gift will be very much appreciated. In addition to being new homeowners, we are saving for the honeymoon of our dreams for our five year anniversary. If you wish to do so electronically, you can do so here: <a href="https://venmo.com/kyleblanc">venmo/kyleblanc</a>
               </p>
             </div>
           </li>
