added viewport meta

--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <title>LeBlanc Engineering | About</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="LeBlanc Engineering is a blog and personal website dedicated to computer science, design, learning, and technology.">
         <link rel="stylesheet" href="./styles.css">
         <script src="https://kit.fontawesome.com/1a6fbd13c0.js" crossorigin="anonymous"></script>
     </head>
