color theme change

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <article>
                     <div class="index-header">
                         <content>
-                            <h2>one two three</h2>
-                            <p>here is some longer text about cool stuff here is some longer text about cool stuff here is some longer text about cool stuff here is some longer text about cool stuff</p>
+                            <h2>Hello</h2>
+                            <p>I'm an engineer from New England. This is a space for learning and engineering in public, among other various topics. </p>
                         </content>
                     </div>
                 </article>
@@ -37,6 +37,12 @@
                             <td>
                                 <a href="" class="tag">EDC</a>
                                 <a href="" class="tag">Tools</a>
+                        </tr>
+                        <tr>
+                            <td><a href="./posts/agnostic-homepage.html" class="internal-link">Creating a Custom Homepage that is Browser Agnostic</a></td>
+                            <td>08/12/2022</td>
+                            <td>
+                                <a href="" class="tag">Web</a>
                         </tr>
                         <tr>
                             <td><a href="./posts/scanning-notes.html" class="internal-link">Scanning Field Notes</a></td>
