about page update

--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
                 <p>Thanks for looking.</p>
 
                 <h2>Interests</h2>
-                <p>Likes: Football (soccer), Hockey, <a href="./tennis/index.html" class="">Tennis</a>, Learning, Motorsports, Vintage Tech Design, Photography</p>
+                <p>Likes: <a href="https://www.xbox.com/en-US/play/user/ToplssNachos384" class="external-link">Xbox</a>, Cooking, Football (soccer), Hockey, <a href="./tennis/index.html" class="">Tennis</a>, Learning, Motorsports, Vintage Tech Design, Photography</p>
 
-                <p>Dislikes: Artichokes</p>
+                <p>Dislikes: Honda CR-Vs, Teslas, Useless AI</p>
 
                 <h2>Experience</h2>
                 <p>Despite always considering myself a student, I am currently a formal student working to obtain my Masters of Computer Science from <a href="https://www.khoury.northeastern.edu" class="external-link">Northeastern University</a>. My undergrad is 
