color change; index style change;

--- a/index.html
+++ b/index.html
@@ -29,7 +29,24 @@
                     </div>
                 </article>
                 <br>
-                <table>
+                <a href="./posts/edc-kit.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Building an EDC Mini-Toolkit</span></a>
+                <a href="./posts/agnostic-homepage.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Creating a Custom Homepage that is Browser Agnostic</span></a>
+                <a href="./posts/scanning-notes.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Scanning Field Notes</span></a>
+                <a href="./posts/high-lvl-k.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Understanding High-Level Kubernetes</span></a>
+                <a href="./posts/casa-pwd.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Changing CasaOS Password With No GUI</span></a>
+                <a href="./posts/sdk-error.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>SDK .NET Error When Creating New UE4 C++ Project</span></a>
+                <a href="./posts/learning-blender.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Learning Blender</span></a>
+                <a href="./posts/corsair-review.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Review: Corsair Virtuoso RGB Headset</span></a>
+                <a href="./posts/new-dev-env.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Automating New Web Dev Environments on macOS</span></a>
+                <a href="./posts/config-profiles.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Viewing Configuration Profiles In Terminal</span></a>
+                <a href="./posts/ad-migration.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>AD Domain Migration on macOS</span></a>
+                <!-- <a href="#" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Twelve</span></a>
+                <a href="#" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Thirteen</span></a>
+                <a href="#" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Fourteen</span></a>
+                <a href="#" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Fifteen</span></a>
+                <a href="#" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Sixteen</span></a>
+                <a href="#" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Seventeen</span></a> -->
+                <!-- <table>
                     <tbody>
                         <tr>
                             <td><a href="./posts/edc-kit.html" class="internal-link">Building an EDC Mini-Toolkit</a></td>
@@ -105,7 +122,7 @@
                                 <a class="tag">Active Directory</a>
                         </tr>
                     </tbody>
-                </table>
+                </table> -->
             </main>
             <footer>
                 <div class="footer-container">
@@ -117,7 +134,7 @@
                   </button>
                 </div>
                 <div>
-                    <p>&copy; 2025 - Made with <span class="fa-solid fa-heart span-green"></span> in Maine. </p>
+                    <p>&copy; 2025 - Made with <span class="fa-solid fa-heart heart"></span> in Maine. </p>
                 </div>
             </footer>
         </div>
