--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     </div>
                 </article>
                 <br>
+                <a href="./posts/tennis2pb.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Leaving Tennis for Pickleball</span></a>
                 <a href="./posts/edc-kit.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Building an EDC Mini-Toolkit</span></a>
                 <a href="./posts/agnostic-homepage.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Creating a Custom Homepage that is Browser Agnostic</span></a>
                 <a href="./posts/scanning-notes.html" class="main-link"><span class="main-link-span"><sup class="sup-tag"></sup>Scanning Field Notes</span></a>
